--- a/src/components/CTAButton.astro
+++ b/src/components/CTAButton.astro
@@ -6,6 +6,7 @@ export interface Props {
   size?: 'sm' | 'md' | 'lg';
   onclick?: string;
   class?: string;
+  target?: string;
 }
 
 const {
@@ -15,6 +16,7 @@ const {
   size = 'md',
   onclick,
   class: className = '',
+  target,
 } = Astro.props;
 
 const baseClasses =
@@ -38,7 +40,7 @@ const classes = `${baseClasses} ${variantClasses[variant]} ${sizeClasses[size]} 
 
 {
   href ? (
-    <a href={href} class={classes}>
+    <a href={href} class={classes} target={target}>
       {text}
     </a>
   ) : (
