--- a/src/components/SchemaOrg.astro
+++ b/src/components/SchemaOrg.astro
@@ -6,4 +6,5 @@ export interface Props {
 const { data } = Astro.props;
 ---
 
-<script type="application/ld+json" set:html={JSON.stringify(data, null, 2)}></script> 
+<script type="application/ld+json" set:html={JSON.stringify(data, null, 2)} />
+
