--- a/src/pages/case.astro
+++ b/src/pages/case.astro
@@ -37,11 +37,7 @@ const cases = [
       'Garantiløfte',
       'Conversion-optimalisert',
     ],
-    results: [
-      '+41% flere befaringer',
-      '-45% bounce rate',
-      '+60% flere leads',
-    ],
+    results: ['+41% flere befaringer', '-45% bounce rate', '+60% flere leads'],
     featured: true,
     websiteUrl: 'https://maby.no',
   },
