--- a/src/pages/case/[slug].astro
+++ b/src/pages/case/[slug].astro
@@ -117,7 +117,7 @@ const testimonialSchema = reviewSchema(
 const breadcrumbs = [
   { name: 'Hjem', url: 'https://nettup.no' },
   { name: 'Case Studies', url: 'https://nettup.no/case' },
-  { name: caseStudy.title, url: `https://nettup.no/case/${slug}` }
+  { name: caseStudy.title, url: `https://nettup.no/case/${slug}` },
 ];
 ---
 
